# AI-nas-Search

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-06-12-qnap-file-index.md  2026-06-16-multi-nas-share-sync.md  2026-06-24-nas-settings-validation.md  2026-07-02-browse-subtree-search.md  2026-07-17-auto-protocol-and-tls-bypass.md
docs/superpowers/specs/: 2026-06-12-qnap-file-index-design.md  2026-06-16-multi-nas-share-permission-sync-design.md  2026-06-24-nas-settings-validation-design.md  2026-07-02-browse-subtree-search-design.md  2026-07-17-auto-protocol-and-tls-bypass-design.md
src/nas_index/: __init__.py  config.py  db.py  logging.py  models.py  time.py  types.py
src/nas_index/qnap/: __init__.py  client.py  errors.py
tests/: conftest.py
tests/integration/: test_admin_auth.py  test_browse.py  test_complete_scan.py  test_dashboard.py  test_downloads.py  test_recovery.py  test_scan_routes.py  test_search.py  test_settings.py  test_user_access.py
tests/unit/: test_access_service.py  test_admin_service.py  test_config.py  test_config_repository.py  test_connection_test_store.py  test_database.py  test_entry_repository.py  test_multi_nas_schema.py  test_nas_repository.py  test_process_monitor.py  test_qnap_auth.py  test_qnap_listing.py  test_redaction.py  test_scan_manager.py  test_scan_rate_tracker.py  test_scanner.py  test_search_repository.py  test_search_summary.py  test_sync_manager.py  test_sync_repository.py  test_thumbnails.py  test_time.py
(+41 files in other folders)
